--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,27 +23,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(8154, 26)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 8154 entries, 0 to 8153\n",
+      "Data columns (total 26 columns):\n",
+      " #   Column                                Non-Null Count  Dtype  \n",
+      "---  ------                                --------------  -----  \n",
+      " 0   date                                  8154 non-null   object \n",
+      " 1   service                               8154 non-null   object \n",
+      " 2   gare_depart                           8154 non-null   object \n",
+      " 3   gare_arrivee                          8154 non-null   object \n",
+      " 4   duree_moyenne                         8154 non-null   int64  \n",
+      " 5   nb_train_prevu                        8154 non-null   int64  \n",
+      " 6   nb_annulation                         8154 non-null   int64  \n",
+      " 7   commentaire_annulation                0 non-null      float64\n",
+      " 8   nb_train_depart_retard                8154 non-null   int64  \n",
+      " 9   retard_moyen_depart                   8154 non-null   float64\n",
+      " 10  retard_moyen_tous_trains_depart       8154 non-null   float64\n",
+      " 11  commentaire_retards_depart            0 non-null      float64\n",
+      " 12  nb_train_retard_arrivee               8154 non-null   int64  \n",
+      " 13  retard_moyen_arrivee                  8154 non-null   float64\n",
+      " 14  retard_moyen_tous_trains_arrivee      8154 non-null   float64\n",
+      " 15  commentaires_retard_arrivee           698 non-null    object \n",
+      " 16  nb_train_retard_sup_15                8154 non-null   int64  \n",
+      " 17  retard_moyen_trains_retard_sup15      8154 non-null   float64\n",
+      " 18  nb_train_retard_sup_30                8154 non-null   int64  \n",
+      " 19  nb_train_retard_sup_60                8154 non-null   int64  \n",
+      " 20  prct_cause_externe                    8154 non-null   float64\n",
+      " 21  prct_cause_infra                      8154 non-null   float64\n",
+      " 22  prct_cause_gestion_trafic             8154 non-null   float64\n",
+      " 23  prct_cause_materiel_roulant           8154 non-null   float64\n",
+      " 24  prct_cause_gestion_gare               8154 non-null   float64\n",
+      " 25  prct_cause_prise_en_charge_voyageurs  8154 non-null   float64\n",
+      "dtypes: float64(13), int64(8), object(5)\n",
+      "memory usage: 1.6+ MB\n"
+     ]
     }
    ],
    "source": [
-    "df.shape"
+    "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -269,13 +298,141 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "59\n",
+      "59\n",
+      "8154\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(set(df[\"gare_depart\"].tolist()))) #pd.get_dummies\n",
+    "print(len(set(df[\"gare_arrivee\"].tolist()))) #pd.get_dummies\n",
+    "print(len(df[\"date\"].tolist())) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_df(df):\n",
+    "    # Add commands to clean dataframe\n",
+    "    df = df.dropna(axis=1, how='all')\n",
+    "    df = df.drop(\"commentaires_retard_arrivee\", axis=1) # str and not relevant for model\n",
+    "    return df\n",
+    "\n",
+    "clean_df = clean_df(df) #Test\n",
+    "# Dataset cleaning should be done on train and test set separately -> ensure reproducibility\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n",
+      "26\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(clean_df.columns))\n",
+    "print(len(df.columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lenghts of train/test: 7428/726\n",
+      "split train/test: 91.1/8.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_train_test_set(df):\n",
+    "    train_idx = []\n",
+    "    test_idx = []\n",
+    "    for i, d in enumerate(df[\"date\"].tolist()):\n",
+    "        month, day, year = d.split('/')\n",
+    "        if int(year)<2023:\n",
+    "            train_idx.append(i)\n",
+    "        else:\n",
+    "            test_idx.append(i)\n",
+    "    \n",
+    "    train_set = df.iloc[train_idx].copy(deep=True)\n",
+    "    test_set = df.iloc[test_idx].copy(deep=True)\n",
+    "    \n",
+    "    return train_set, test_set\n",
+    "\n",
+    "train_set, test_set = get_train_test_set(df)\n",
+    "\n",
+    "\n",
+    "split = [(len(train_idx)/len(df))*100, (len(test_idx)/len(df))*100]\n",
+    "print(f\"Lenghts of train/test: {len(train_idx)}/{len(test_idx)}\")\n",
+    "print(f\"split train/test: {round(split[0],2)}/{round(split[1],2)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'International', 'National'}"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(train_set[\"service\"].tolist())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "test with date transform to year, months over years, days"
    ]
   }
  ],
@@ -295,7 +452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
