--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Objectif\n",
+    "- prédire le temps de retard moyen des trains sur une ligne sur un mois\n",
+    "--> predire retard_moyen_arrivee? ou retard_moyen_tous_trains_arrivee?\n",
+    "- prédire la cause du retard (en pourcentage pour chaque cause potentielle) sur une ligne sur un mois\n",
+    "\n",
+    "- alternative --> fusionner toutes les lignes sur un mois et predire sur un mois pour toute les lignes à la fois\n",
+    "\n",
+    "## Questions\n",
+    "\n",
+    "### faire deux modèles distincts ou dépendants pour ces deux problématique?\n",
+    "- si dépendant --> NN avec une regression et des classifs en sortie\n",
+    "- si indépendant --> on a le choix\n",
+    "- mix --> on prédit la regression d'abord puis la classif en se servant des resultats de la regression ( ou inversement)\n",
+    "\n",
+    "### Modèles independants pour chaque ligne de train ou tout lier?\n",
+    "- si indépendant, plus facile à gérer on peut facilement créer des séries temporelles, mais beaucoup(beaucoup) de modèle à créer\n",
+    "- si liée, on peut exploiter des correlations en plus et on n'a qu'un modèle, mais on doit encoder l'année, le mois et toutes les gares (avec un one hot ça va faire beaucoup de colonne, avec un ordinal on introduit une relation d'ordre qui n'existe pas, remarque on aurait pas ce soucis avec des arbres de décision)\n",
+    "\n",
+    "### Analyse à faire \n",
+    "- autocorrelation mois et année sur le temps de retard et les causes du retard\n",
+    "- regarder correlation retard moyen entre paris-lyon et lyon-paris (pour tout les couples de gares)\n",
+    "- pleins d'autres trucs qui nous permettront d'enlever/modifier/rajouter des colonnes\n",
+    "\n",
+    "### Données qu'on peut rajouter\n",
+    "- longueur de chaque lignes (pas forcement nécessaire?)\n",
+    "\n",
+    "### Infos importantes\n",
+    "- https://www.data.gouv.fr/fr/datasets/regularite-mensuelle-tgv-par-liaisons/"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,239 +106,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>service</th>\n",
-       "      <th>gare_depart</th>\n",
-       "      <th>gare_arrivee</th>\n",
-       "      <th>duree_moyenne</th>\n",
-       "      <th>nb_train_prevu</th>\n",
-       "      <th>nb_annulation</th>\n",
-       "      <th>commentaire_annulation</th>\n",
-       "      <th>nb_train_depart_retard</th>\n",
-       "      <th>retard_moyen_depart</th>\n",
-       "      <th>...</th>\n",
-       "      <th>nb_train_retard_sup_15</th>\n",
-       "      <th>retard_moyen_trains_retard_sup15</th>\n",
-       "      <th>nb_train_retard_sup_30</th>\n",
-       "      <th>nb_train_retard_sup_60</th>\n",
-       "      <th>prct_cause_externe</th>\n",
-       "      <th>prct_cause_infra</th>\n",
-       "      <th>prct_cause_gestion_trafic</th>\n",
-       "      <th>prct_cause_materiel_roulant</th>\n",
-       "      <th>prct_cause_gestion_gare</th>\n",
-       "      <th>prct_cause_prise_en_charge_voyageurs</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1/1/2018</td>\n",
-       "      <td>National</td>\n",
-       "      <td>BORDEAUX ST JEAN</td>\n",
-       "      <td>PARIS MONTPARNASSE</td>\n",
-       "      <td>141</td>\n",
-       "      <td>870</td>\n",
-       "      <td>5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>289</td>\n",
-       "      <td>11.247809</td>\n",
-       "      <td>...</td>\n",
-       "      <td>110</td>\n",
-       "      <td>6.511118</td>\n",
-       "      <td>44</td>\n",
-       "      <td>8</td>\n",
-       "      <td>36.134454</td>\n",
-       "      <td>31.092437</td>\n",
-       "      <td>10.924370</td>\n",
-       "      <td>15.966387</td>\n",
-       "      <td>5.042017</td>\n",
-       "      <td>0.840336</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1/1/2018</td>\n",
-       "      <td>National</td>\n",
-       "      <td>LA ROCHELLE VILLE</td>\n",
-       "      <td>PARIS MONTPARNASSE</td>\n",
-       "      <td>165</td>\n",
-       "      <td>222</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2.875000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>22</td>\n",
-       "      <td>5.696096</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>15.384615</td>\n",
-       "      <td>30.769231</td>\n",
-       "      <td>38.461538</td>\n",
-       "      <td>11.538462</td>\n",
-       "      <td>3.846154</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1/1/2018</td>\n",
-       "      <td>National</td>\n",
-       "      <td>PARIS MONTPARNASSE</td>\n",
-       "      <td>QUIMPER</td>\n",
-       "      <td>220</td>\n",
-       "      <td>248</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>37</td>\n",
-       "      <td>9.501351</td>\n",
-       "      <td>...</td>\n",
-       "      <td>26</td>\n",
-       "      <td>7.548387</td>\n",
-       "      <td>17</td>\n",
-       "      <td>7</td>\n",
-       "      <td>26.923077</td>\n",
-       "      <td>38.461538</td>\n",
-       "      <td>15.384615</td>\n",
-       "      <td>19.230769</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1/1/2018</td>\n",
-       "      <td>National</td>\n",
-       "      <td>PARIS MONTPARNASSE</td>\n",
-       "      <td>ST MALO</td>\n",
-       "      <td>156</td>\n",
-       "      <td>102</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>12</td>\n",
-       "      <td>19.912500</td>\n",
-       "      <td>...</td>\n",
-       "      <td>8</td>\n",
-       "      <td>6.724757</td>\n",
-       "      <td>6</td>\n",
-       "      <td>4</td>\n",
-       "      <td>23.076923</td>\n",
-       "      <td>46.153846</td>\n",
-       "      <td>7.692308</td>\n",
-       "      <td>15.384615</td>\n",
-       "      <td>7.692308</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1/1/2018</td>\n",
-       "      <td>National</td>\n",
-       "      <td>PARIS MONTPARNASSE</td>\n",
-       "      <td>ST PIERRE DES CORPS</td>\n",
-       "      <td>61</td>\n",
-       "      <td>391</td>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>61</td>\n",
-       "      <td>7.796995</td>\n",
-       "      <td>...</td>\n",
-       "      <td>17</td>\n",
-       "      <td>3.346487</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>21.212121</td>\n",
-       "      <td>42.424242</td>\n",
-       "      <td>9.090909</td>\n",
-       "      <td>21.212121</td>\n",
-       "      <td>6.060606</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 26 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       date   service         gare_depart         gare_arrivee  duree_moyenne  \\\n",
-       "0  1/1/2018  National    BORDEAUX ST JEAN   PARIS MONTPARNASSE            141   \n",
-       "1  1/1/2018  National   LA ROCHELLE VILLE   PARIS MONTPARNASSE            165   \n",
-       "2  1/1/2018  National  PARIS MONTPARNASSE              QUIMPER            220   \n",
-       "3  1/1/2018  National  PARIS MONTPARNASSE              ST MALO            156   \n",
-       "4  1/1/2018  National  PARIS MONTPARNASSE  ST PIERRE DES CORPS             61   \n",
-       "\n",
-       "   nb_train_prevu  nb_annulation  commentaire_annulation  \\\n",
-       "0             870              5                     NaN   \n",
-       "1             222              0                     NaN   \n",
-       "2             248              1                     NaN   \n",
-       "3             102              0                     NaN   \n",
-       "4             391              2                     NaN   \n",
-       "\n",
-       "   nb_train_depart_retard  retard_moyen_depart  ...  nb_train_retard_sup_15  \\\n",
-       "0                     289            11.247809  ...                     110   \n",
-       "1                       8             2.875000  ...                      22   \n",
-       "2                      37             9.501351  ...                      26   \n",
-       "3                      12            19.912500  ...                       8   \n",
-       "4                      61             7.796995  ...                      17   \n",
-       "\n",
-       "   retard_moyen_trains_retard_sup15  nb_train_retard_sup_30  \\\n",
-       "0                          6.511118                      44   \n",
-       "1                          5.696096                       5   \n",
-       "2                          7.548387                      17   \n",
-       "3                          6.724757                       6   \n",
-       "4                          3.346487                       6   \n",
-       "\n",
-       "   nb_train_retard_sup_60  prct_cause_externe prct_cause_infra  \\\n",
-       "0                       8           36.134454        31.092437   \n",
-       "1                       0           15.384615        30.769231   \n",
-       "2                       7           26.923077        38.461538   \n",
-       "3                       4           23.076923        46.153846   \n",
-       "4                       0           21.212121        42.424242   \n",
-       "\n",
-       "   prct_cause_gestion_trafic  prct_cause_materiel_roulant  \\\n",
-       "0                  10.924370                    15.966387   \n",
-       "1                  38.461538                    11.538462   \n",
-       "2                  15.384615                    19.230769   \n",
-       "3                   7.692308                    15.384615   \n",
-       "4                   9.090909                    21.212121   \n",
-       "\n",
-       "   prct_cause_gestion_gare  prct_cause_prise_en_charge_voyageurs  \n",
-       "0                 5.042017                              0.840336  \n",
-       "1                 3.846154                              0.000000  \n",
-       "2                 0.000000                              0.000000  \n",
-       "3                 7.692308                              0.000000  \n",
-       "4                 6.060606                              0.000000  \n",
-       "\n",
-       "[5 rows x 26 columns]"
+       "0       28.436735\n",
+       "1       21.524020\n",
+       "2       55.692308\n",
+       "3       48.623077\n",
+       "4       12.405164\n",
+       "          ...    \n",
+       "8149    30.157302\n",
+       "8150    76.688889\n",
+       "8151    45.841146\n",
+       "8152    41.487213\n",
+       "8153    42.007752\n",
+       "Name: retard_moyen_arrivee, Length: 8154, dtype: float64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df[\"retard_moyen_arrivee\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        6.511118\n",
+       "1        5.696096\n",
+       "2        7.578947\n",
+       "3        6.790686\n",
+       "4        3.346487\n",
+       "          ...    \n",
+       "8149     7.689898\n",
+       "8150    14.824264\n",
+       "8151     8.650349\n",
+       "8152    12.765753\n",
+       "8153     7.251702\n",
+       "Name: retard_moyen_tous_trains_arrivee, Length: 8154, dtype: float64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"retard_moyen_tous_trains_arrivee\"]"
    ]
   },
   {
@@ -452,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
