ajout suggestion feature externe

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -41,6 +41,7 @@
     "\n",
     "### Données qu'on peut rajouter\n",
     "- longueur de chaque lignes (pas forcement nécessaire?)\n",
+    "- nombre d'habitants dans chaques ville\n",
     "\n",
     "### Infos importantes\n",
     "- https://www.data.gouv.fr/fr/datasets/regularite-mensuelle-tgv-par-liaisons/"
