--- a/matthias_notebook.ipynb
+++ b/matthias_notebook.ipynb
@@ -667,13 +667,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder,LabelBinarizer,OrdinalEncoder\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder,LabelBinarizer,OrdinalEncoder,MinMaxScaler,Normalizer\n",
     "from sklearn.feature_extraction.text import HashingVectorizer\n",
     "\n",
     "def manage_date_column(df):\n",
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1043,7 @@
        "[7426 rows x 18 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
