--- a/matthias_notebook.ipynb
+++ b/matthias_notebook.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
        "[0 rows x 26 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
        "[2 rows x 26 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,31 +667,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder,LabelBinarizer,OrdinalEncoder,MinMaxScaler,Normalizer\n",
-    "from sklearn.feature_extraction.text import HashingVectorizer\n",
+    "from sklearn.feature_extraction import FeatureHasher\n",
     "\n",
     "def manage_date_column(df):\n",
     "    df['date'] = pd.to_datetime(df['date'])\n",
     "    df['year'] = df['date'].dt.year\n",
-    "    df['month'] = df['date'].dt.month\n",
+    "    df['month'] = df['date'].dt.month.apply(str).apply(lambda x:[x])\n",
     "    df = df.drop(\"date\",axis=1)\n",
     "    return df\n",
     "\n",
-    "def preprocessing(df,target,estimated_retard_moyen = False):\n",
-    "    \n",
+    "def preprocessing(df1,target,estimated_retard_moyen = False):\n",
+    "    df = df1.copy()\n",
     "    df = manage_date_column(df)\n",
+    "    df[\"gare_arrivee\"] = df[\"gare_arrivee\"].apply(lambda x:[x])\n",
+    "    df[\"gare_depart\"] = df[\"gare_depart\"].apply(lambda x:[x])\n",
     "    \n",
-    "    scaling_cols = [\"nb_train_prevu\",\"year\"]  # year could be removed\n",
-    "    hash_cols = []\n",
+    "    df[\"ligne\"] = df.apply(lambda x:x[\"gare_arrivee\"]+x[\"gare_depart\"],axis = 1)\n",
+    "    df = df.drop([\"gare_arrivee\",\"gare_depart\"],axis = 1)\n",
+    "    \n",
+    "    scaling_cols = [\"nb_train_prevu\"]  # year could be removed\n",
+    "    hash_cols1 = \"month\"\n",
+    "    hash_cols2 = [\"ligne\"]  # \"gare_depart\",\"gare_arrivee\"\n",
     "    binarizer_cols = []\n",
-    "    onehot_cols = [\"service\",\"month\"]\n",
-    "    ordinal_encode_cols = [\"gare_depart\",\"gare_arrivee\"]\n",
+    "    onehot_cols = [\"service\"]\n",
+    "    ordinal_encode_cols = []\n",
     "        \n",
     "    if estimated_retard_moyen:\n",
     "        scaling_cols += [\"estimated_retard_moyen\"]\n",
@@ -701,8 +707,10 @@
     "           \n",
     "    binarizer_transformer = Pipeline(steps=[\n",
     "        ('binarizer',LabelBinarizer())])\n",
-    "    hash_transformer = Pipeline(steps=[\n",
-    "        ('hashing', HashingVectorizer(n_features=10))])\n",
+    "    hash_transformer1 = Pipeline(steps=[\n",
+    "        ('hashing', FeatureHasher(n_features=4,input_type = \"string\"))]) # For month\n",
+    "    hash_transformer2 = Pipeline(steps=[\n",
+    "        ('hashing2', FeatureHasher(n_features=16,input_type = \"string\"))]) # For stations\n",
     "    numeric_transformer = Pipeline(steps=[\n",
     "        ('scaler', StandardScaler())])\n",
     "    onehot_transformer = Pipeline(steps=[\n",
@@ -710,346 +718,33 @@
     "    ordinal_encode_transformer = Pipeline(steps=[\n",
     "        ('ordinal_encode', OrdinalEncoder())])\n",
     "\n",
-    "    preprocessor = ColumnTransformer(\n",
-    "        transformers=[\n",
+    "    transformers=[\n",
     "            # ('cat', binarizer_transformer,binarizer_cols),\n",
-    "            # ('hash', hash_transformer, hash_cols),\n",
-    "            ('num', numeric_transformer, scaling_cols),\n",
+    "            ('hash', hash_transformer1, hash_cols1)]\n",
+    "    \n",
+    "    for i in range(len(hash_cols2)):\n",
+    "        transformers.append(('hash'+str(i), hash_transformer2, hash_cols2[i]))\n",
+    "     \n",
+    "    transformers += [('num', numeric_transformer, scaling_cols),\n",
     "            ('one', onehot_transformer, onehot_cols),\n",
-    "            ('ord', ordinal_encode_transformer, ordinal_encode_cols)\n",
-    "        ])\n",
+    "            # ('ord', ordinal_encode_transformer, ordinal_encode_cols)\n",
+    "            ]\n",
     "\n",
-    "    X_transformed = preprocessor.fit_transform(X)\n",
+    "    # print(transformers) \n",
+    "    preprocessor = ColumnTransformer(\n",
+    "        transformers=transformers\n",
+    "        #remainder = 'passthrough', # Will cause undesirerable columns to stay in X_transformed\n",
+    "        )\n",
+    "    \n",
+    "    X_transformed = preprocessor.fit_transform(X).todense()\n",
     "    \n",
     "    return X_transformed,y\n",
     "\n",
-    "target = 'prct_cause_externe'\n",
+    "target = \"retard_moyen_arrivee\"\n",
     "# ['prct_cause_externe', 'prct_cause_infra', 'prct_cause_gestion_trafic','prct_cause_materiel_roulant', 'prct_cause_gestion_gare','prct_cause_prise_en_charge_voyageurs']\n",
     "\n",
     "X_train,y_train = preprocessing(trainset,target)\n",
     "X_test,y_test = preprocessing(testset,target)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>10</th>\n",
-       "      <th>11</th>\n",
-       "      <th>12</th>\n",
-       "      <th>13</th>\n",
-       "      <th>14</th>\n",
-       "      <th>15</th>\n",
-       "      <th>16</th>\n",
-       "      <th>17</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3.597838</td>\n",
-       "      <td>-1.386073</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>39.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-0.179824</td>\n",
-       "      <td>-1.386073</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>39.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-0.028251</td>\n",
-       "      <td>-1.386073</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>44.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-0.879391</td>\n",
-       "      <td>-1.386073</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>48.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.805399</td>\n",
-       "      <td>-1.386073</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>49.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7421</th>\n",
-       "      <td>-0.383865</td>\n",
-       "      <td>1.426024</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>38.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7422</th>\n",
-       "      <td>3.288863</td>\n",
-       "      <td>1.426024</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>46.0</td>\n",
-       "      <td>39.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7423</th>\n",
-       "      <td>-1.112580</td>\n",
-       "      <td>1.426024</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>34.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7424</th>\n",
-       "      <td>1.942196</td>\n",
-       "      <td>1.426024</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>37.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7425</th>\n",
-       "      <td>-0.208973</td>\n",
-       "      <td>1.426024</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>53.0</td>\n",
-       "      <td>39.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>7426 rows × 18 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            0         1    2    3    4    5    6    7    8    9    10   11  \\\n",
-       "0     3.597838 -1.386073  0.0  1.0  1.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-       "1    -0.179824 -1.386073  0.0  1.0  1.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-       "2    -0.028251 -1.386073  0.0  1.0  1.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-       "3    -0.879391 -1.386073  0.0  1.0  1.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-       "4     0.805399 -1.386073  0.0  1.0  1.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-       "...        ...       ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...   \n",
-       "7421 -0.383865  1.426024  0.0  1.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-       "7422  3.288863  1.426024  0.0  1.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-       "7423 -1.112580  1.426024  0.0  1.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-       "7424  1.942196  1.426024  0.0  1.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-       "7425 -0.208973  1.426024  0.0  1.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-       "\n",
-       "       12   13   14   15    16    17  \n",
-       "0     0.0  0.0  0.0  0.0   9.0  39.0  \n",
-       "1     0.0  0.0  0.0  0.0  19.0  39.0  \n",
-       "2     0.0  0.0  0.0  0.0  39.0  44.0  \n",
-       "3     0.0  0.0  0.0  0.0  39.0  48.0  \n",
-       "4     0.0  0.0  0.0  0.0  39.0  49.0  \n",
-       "...   ...  ...  ...  ...   ...   ...  \n",
-       "7421  0.0  0.0  0.0  1.0  42.0  38.0  \n",
-       "7422  0.0  0.0  0.0  1.0  46.0  39.0  \n",
-       "7423  0.0  0.0  0.0  1.0  50.0  34.0  \n",
-       "7424  0.0  0.0  0.0  1.0  50.0  37.0  \n",
-       "7425  0.0  0.0  0.0  1.0  53.0  39.0  \n",
-       "\n",
-       "[7426 rows x 18 columns]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.DataFrame(X_train)"
    ]
   },
   {
@@ -1065,6 +760,32 @@
     "    - X,y = Preprocessing(trainset,target = cause,estimated_retard_moyen=True)\n",
     "    - pred = Modèle_ML2(X,y) , évaluer\n",
     "    - softmax\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.719301674548854\n",
+      "353.72379538565394\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import mean_squared_error,mean_absolute_error\n",
+    "\n",
+    "model = LinearRegression()\n",
+    "model.fit(np.asarray(X_train),np.asarray(y_train))\n",
+    "y_pred = model.predict(np.asarray(X_test))\n",
+    "\n",
+    "print(mean_absolute_error(y_pred,y_test))\n",
+    "print(mean_squared_error(y_test,y_pred))"
    ]
   }
  ],
