--- a/matthias_notebook.ipynb
+++ b/matthias_notebook.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -465,6 +465,11 @@
     "    columns_to_remove = other_columns + columns_retard\n",
     "    df = df.drop(columns_to_remove, axis=1)\n",
     "    df = df.drop([2886,2889],axis = 0)  # Remove outliers isolated in the next cell\n",
+    "    df = df.reset_index(drop = True)\n",
+    "    for i, d in enumerate(df[\"date\"].tolist()):  # Remove first lockdown\n",
+    "        month, day, year = d.split('/')\n",
+    "        if (int(year) == 2020 and int(month) in [3,4,5]):\n",
+    "              df = df.drop(i,axis = 0)\n",
     "    return df\n",
     "\n",
     "def check_errors(df,columns_cause):\n",
@@ -636,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +697,7 @@
     "    df[\"ligne\"] = df.apply(lambda x:x[\"gare_arrivee\"]+x[\"gare_depart\"],axis = 1)\n",
     "    df = df.drop([\"gare_arrivee\",\"gare_depart\"],axis = 1)\n",
     "    \n",
-    "    scaling_cols = [\"nb_train_prevu\"]  # year could be removed\n",
+    "    scaling_cols = [\"nb_train_prevu\",\"year\"]  # year could be removed\n",
     "    hash_cols1 = \"month\"\n",
     "    hash_cols2 = [\"ligne\"]  # \"gare_depart\",\"gare_arrivee\"\n",
     "    binarizer_cols = []\n",
@@ -748,23 +753,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1) X,y = Preprocessing(trainset,target = \"retard_moyen_arrivee\")\n",
-    "    - X,y = Preprocessing(testset,target = \"retard_moyen_arrivee\")\n",
-    "2) pred = Modèle_ML(X,y) , évaluer\n",
-    "3) remplacer vraies valeurs de \"retard_moyen_arrivee\" sur testset par pred\n",
-    "4) for cause in liste_cause:\n",
-    "    - X,y = Preprocessing(trainset,target = cause,estimated_retard_moyen=True)\n",
-    "    - X,y = Preprocessing(trainset,target = cause,estimated_retard_moyen=True)\n",
-    "    - pred = Modèle_ML2(X,y) , évaluer\n",
-    "    - softmax\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
