--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,13 +672,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder,LabelBinarizer,OrdinalEncoder,MinMaxScaler,Normalizer\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder,LabelBinarizer,OrdinalEncoder,MinMaxScaler,Normalizer,RobustScaler\n",
     "from sklearn.feature_extraction import FeatureHasher\n",
     "\n",
     "def manage_date_column(df):\n",
@@ -717,7 +717,7 @@
     "    hash_transformer2 = Pipeline(steps=[\n",
     "        ('hashing2', FeatureHasher(n_features=16,input_type = \"string\"))]) # For stations\n",
     "    numeric_transformer = Pipeline(steps=[\n",
-    "        ('scaler', StandardScaler())])\n",
+    "        ('scaler', RobustScaler())])\n",
     "    onehot_transformer = Pipeline(steps=[\n",
     "        ('onehot', OneHotEncoder())])\n",
     "    ordinal_encode_transformer = Pipeline(steps=[\n",
@@ -754,15 +754,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.59725442222299\n",
-      "344.55534006745035\n"
+      "10.599525212681879\n",
+      "344.8618134030007\n"
      ]
     }
    ],
