--- a/knn.ipynb
+++ b/knn.ipynb
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,14 +763,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import neighbors\n",
     "from sklearn.metrics import r2_score\n",
     "\n",
-    "n_neighbors = 1000\n",
+    "n_neighbors = 100\n",
     "\n",
     "X = np.asarray(X_train)\n",
     "y = np.asarray(y_train)\n",
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,23 +826,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(KNeighborsRegressor(n_neighbors=23, weights='distance'),\n",
-       " 0.0008349146703853227)"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# choose a random number\n"
+    "best_model, current_error"
    ]
   }
  ],
