--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +697,7 @@
     "    df[\"ligne\"] = df.apply(lambda x:x[\"gare_arrivee\"]+x[\"gare_depart\"],axis = 1)\n",
     "    df = df.drop([\"gare_arrivee\",\"gare_depart\"],axis = 1)\n",
     "    \n",
-    "    scaling_cols = [\"nb_train_prevu\",\"year\"]  # year could be removed\n",
+    "    scaling_cols = [\"nb_train_prevu\"]  # year could be removed\n",
     "    hash_cols1 = \"month\"\n",
     "    hash_cols2 = [\"ligne\"]  # \"gare_depart\",\"gare_arrivee\"\n",
     "    binarizer_cols = []\n",
@@ -754,15 +754,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.599525212681879\n",
-      "344.8618134030007\n"
+      "10.600867455016962\n",
+      "345.20165594816774\n"
      ]
     }
    ],
