--- a/knn_svn.ipynb
+++ b/knn_svn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
        "[0 rows x 26 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
        "[2 rows x 26 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +697,7 @@
     "    df[\"ligne\"] = df.apply(lambda x:x[\"gare_arrivee\"]+x[\"gare_depart\"],axis = 1)\n",
     "    df = df.drop([\"gare_arrivee\",\"gare_depart\"],axis = 1)\n",
     "    \n",
-    "    scaling_cols = [\"nb_train_prevu\",\"year\"]  # year could be removed\n",
+    "    scaling_cols = [\"nb_train_prevu\"]\n",
     "    hash_cols1 = \"month\"\n",
     "    hash_cols2 = [\"ligne\"]  # \"gare_depart\",\"gare_arrivee\"\n",
     "    binarizer_cols = []\n",
@@ -763,14 +763,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import neighbors\n",
-    "from sklearn.metrics import r2_score\n",
+    "from sklearn.model_selection import cross_val_score\n",
     "\n",
-    "n_neighbors = 100\n",
+    "n_neighbors = 1000\n",
     "\n",
     "X = np.asarray(X_train)\n",
     "y = np.asarray(y_train)\n",
@@ -786,51 +786,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_list = []\n",
-    "pred_list = []\n",
+    "scores_list = []\n",
     "\n",
     "for i in range(n_neighbors):\n",
     "    knn = neighbors.KNeighborsRegressor(i+1, weights='distance')\n",
-    "    model = knn.fit(X, y)\n",
-    "    pred_list.append(model.predict(T))\n",
-    "    model_list.append(model)"
+    "    scores = cross_val_score(knn, X, y, cv=5, scoring='neg_mean_squared_error')\n",
+    "\n",
+    "    model_list.append(knn)\n",
+    "    scores_list.append(scores)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Calculate error"
+    "## Find best score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
     "best_model = model_list[0]\n",
-    "current_error = r2_score(y_test, pred_list[0])\n",
+    "best_score_mean = scores_list[0].mean()\n",
     "\n",
-    "for i in range(1, len(pred_list)):\n",
-    "    error = r2_score(y_test, pred_list[i])\n",
+    "for i in range(1, len(model_list)):\n",
+    "    score_mean = scores_list[i].mean()\n",
     "\n",
-    "    if abs(error) < abs(current_error):\n",
-    "        current_error = error\n",
+    "    if score_mean > best_score_mean:\n",
+    "        best_score_mean = score_mean\n",
     "        best_model = model_list[i]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(KNeighborsRegressor(n_neighbors=290, weights='distance'), -226.0499454562335)"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_model, best_score_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE:  340.1429441874584\n",
+      "MAE:  10.409151597996802\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+    "\n",
+    "best_model.fit(X,y)\n",
+    "best_model.predict(T)\n",
+    "pred = best_model.predict(T)\n",
+    "print(\"MSE: \",mean_squared_error(y_test, pred))\n",
+    "print(\"MAE: \",mean_absolute_error(y_test, pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE:  362.27738830018336\n",
+      "MAE:  11.243533338901047\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn = neighbors.KNeighborsRegressor(5, weights='distance')\n",
+    "knn.fit(X,y)\n",
+    "knn.predict(T)\n",
+    "pred_knn = knn.predict(T)\n",
+    "print(\"MSE: \",mean_squared_error(y_test, pred_knn))\n",
+    "print(\"MAE: \",mean_absolute_error(y_test, pred_knn))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SVR\n",
+    "## Import library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_model, current_error"
+    "from sklearn.svm import SVR\n",
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.model_selection import GridSearchCV"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svr = SVR()\n",
+    "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "grid_search = GridSearchCV(svr, param_grid={'kernel': ['linear', 'rbf', 'poly'], 'C': [0.1, 1, 10]}, cv=kf, scoring='neg_mean_squared_error')\n",
+    "\n",
+    "X = np.asarray(X_train)\n",
+    "y = np.asarray(y_train)\n",
+    "T = np.asarray(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fit model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_search.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Find params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_params = grid_search.best_params_\n",
+    "best_score = grid_search.best_score_\n",
+    "\n",
+    "print(\"Best params: \", best_params)\n",
+    "print(\"Best score (MSE): \", best_score)"
    ]
   }
  ],
